# jarvis-agent

./: .env.example  .gitignore  README.md  chat_cli.py  pyproject.toml
app/: main.py
app/agent/: graph.py  prompts.py  tools.py
app/agents/: graph.py  tools.py
app/agents/agent_google/: graph.py
app/agents/agent_google/nodes/: calendar_node.py  docs_node.py  drive_node.py  gmail_node.py  tasks_node.py
app/agents/agent_researcher/: graph.py
app/agents/agent_researcher/nodes/: academic_search_node.py  web_search_node.py  writer_node.py
app/api/: routes.py  schemas.py
app/core/: config.py  google_auth.py
app/services/: chat_service.py  researcher.py  task_tool.py
app/services/google/: calendar.py  docs.py  drive.py  gmail.py  tasks.py
app/services/research/: academic_search_tools.py  web_search_tools.py  writer_tools.py
